# category-matching

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  categories.py  embeddings.py  search.py  semantic_search.py  tf_idf.py
