[tool.poetry]
name = "category-matching"
version = "0.1.0"
description = ""
authors = ["Niko <n.vlahovic@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
torch = "^2.2.2"
transformers = "^4.39.1"
ipython = "^8.22.2"
uvicorn = "^0.29.0"
sentence-transformers = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
